@@ -39,7 +39,7 @@ public class TimRsuServiceTest extends TestBase<TimRsuService> {
         Long data = uut.AddTimRsu(timId, rsuId, rsuIndex);
 
         // Assert
-        assertEquals(new Long(-1), data);
+        assertEquals(Long.valueOf(-1), data);
         verify(mockSqlNullHandler).setLongOrNull(mockPreparedStatement, 1, timId);// TIM_ID
         verify(mockSqlNullHandler).setIntegerOrNull(mockPreparedStatement, 2, rsuId);// RSU_ID
         verify(mockSqlNullHandler).setIntegerOrNull(mockPreparedStatement, 3, rsuIndex);// RSU_INDEX
@@ -59,7 +59,7 @@ public class TimRsuServiceTest extends TestBase<TimRsuService> {
         Long data = uut.AddTimRsu(timId, rsuId, rsuIndex);
 
         // Assert
-        assertEquals(new Long(0), data);
+        assertEquals(Long.valueOf(0), data);
         verify(mockPreparedStatement).close();
         verify(mockConnection).close();
     }
